# tarracsh

./: .clang-format  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-tarracsh  bazel-testlogs  build.sh  notes.txt  server-proto-build.bat  tarracsh.sln  tarracsh.sln.DotSettings  tarrash.sln  tarrash.sln.DotSettings  tarrash.vcxproj  vcpkg-tarracsh.json  vcpkg.json
cfdiff/: CMakeLists.txt  README.md  build-all.sh  build.sh  cfdiff.vcxproj  cfdiff.vcxproj.filters  vcpkg.json
cfdiff/src/: domain  infrastructure
cfdiff/src/cli/: ClassfileDiffApp.cpp  ClassfileDiffApp.h  Main.cpp
src/: BUILD.bazel
src/app/: Analyzer.cpp  Analyzer.h  App.cpp  App.h  AppRuntime.h  BUILD.bazel  Config.h  Context.h  Main.cpp  Options.cpp  Options.h  Stats.cpp  Stats.h  Tarracsh.h  TarracshApp.cpp  TarracshApp.h
src/app/classfile/: BUILD.bazel  ParserOutput.cpp  ParserOutput.h  ParserPrinter.cpp  ParserPrinter.h
src/app/commands/: BUILD.bazel  CallGraph.cpp  CallGraph.h  CallGraphCommand.cpp  CallGraphCommand.h  Command.h  DbBasedCommand.cpp  DbBasedCommand.h  Parse.cpp  Parse.h  ParseCommand.cpp  ParseCommand.h  PublicDigest.cpp  PublicDigest.h  Query.h
src/app/jars/: DigestTask.cpp  DigestTask.h  GraphTask.cpp  GraphTask.h  JarEntry.h  ParserTask.cpp  ParserTask.h  Processor.cpp  Processor.h  Task.h
src/app/log/: Log.cpp  Log.h
src/app/nav/: HtmlGen.cpp  HtmlGen.h
src/app/server/: BUILD.bazel  RequestConfig.h  RequestContext.cpp  RequestContext.h
src/app/stats/: DigestReport.cpp  DigestReport.h  ProfileData.cpp  ProfileData.h  Report.cpp  Report.h  ScopedTimer.cpp  ScopedTimer.h  Stats.cpp  Stats.h
src/classfile/: AccessModifiers.h  Analyzer.cpp  Analyzer.h  AnnotationsParser.cpp  AnnotationsParser.h  AttributeStructures.h  Attributes.h  AttributesManager.h  ClassFileAnalyzer.cpp  ClassFileAnalyzer.h  ClassFileDigest.cpp  ClassFileDigest.h  ClassFileInfo.h  ClassFileParser.cpp  ClassFileParser.h  ClassFileStructure.h  ClassFileStructures.h  ConstantPool.cpp  ConstantPool.h  ConstantPoolPrinter.cpp  ConstantPoolPrinter.h  DescriptorParser.h  DescriptorScanner.h  DirAnalyzer.cpp  DirAnalyzer.h  FilesystemUtils.h  JarAnalyzer.cpp  JarAnalyzer.h  JarParser.cpp  JarParser.h  Log.h  MethodDescriptorParser.h  ParserOutput.cpp  ParserOutput.h  SignatureParser.cpp  SignatureParser.h  SignatureStructures.h  StackFrame.h  Stats.cpp  Stats.h  (+8 more)
src/classfile/constpool/: ConstantPool.cpp  ConstantPool.h  ConstantPoolPrinter.cpp  ConstantPoolPrinter.h  ConstpoolStructures.h  StackFrame.h
src/classfile/includes/: AttributeTags.h  classfile_constants.h
src/classfile/jars/: JarAnalyzer.cpp  JarAnalyzer.h  JarAnalyzerTask.cpp  JarAnalyzerTask.h  JarDigestTask.cpp  JarDigestTask.h  JarDigester.cpp  JarDigester.h  JarEntry.h  JarProcessor.cpp  JarProcessor.h  JarTask.cpp  JarTask.h
src/classfile/readers/: ClassFileReader.cpp  ClassFileReader.h  FileReader.h  MemoryReader.cpp  MemoryReader.h
src/classfile/signatures/: SignatureParser.cpp  SignatureParser.h  SignatureScanner.h  SignatureStructures.h
src/classfile/tables/: ClassfileDigestTable.h  ClassfilesTable.h  DigestTable.cpp  DigestTable.h  FilesTable.cpp  FilesTable.h  PublicMd5Table.h  PublicShaTable.h  StringPool.h  Table.h
src/db/: CallGraphDb.cpp  CallGraphDb.h  DigestDb.cpp  DigestDb.h  Query.h
src/db/columns/: Columns.h
src/db/table/: ClassfilesTable.cpp  ClassfilesTable.h  FilesTable.cpp  FilesTable.h
src/domain/: BUILD.bazel  Options.cpp  Options.h  Utils.h
src/domain/classfile/: AccessModifiers.h  AnnotationsParser.cpp  AnnotationsParser.h  AttributeStructures.h  AttributeTags.h  AttributesManager.h  BUILD.bazel  ClassFileAnalyzer.cpp  ClassFileAnalyzer.h  ClassFileConstants.h  ClassFileDigest.cpp  ClassFileDigest.h  ClassFileInfo.h  ClassFileParser.cpp  ClassFileParser.h  DescriptorParser.h  MethodDescriptorParser.h  ParserOutput.cpp  ParserOutput.h  StandaloneClassFileInfo.h  VectorReader.h
src/domain/db/: BUILD.bazel  CallGraphDb.cpp  CallGraphDb.h  DigestDb.cpp  DigestDb.h  Query.h
src/domain/digest/: BUILD.bazel  ClassFileDigest.cpp  ClassFileDigest.h  DigestEntryInfo.h  DigestUtils.h
src/domain/graph/: BUILD.bazel  ClassFileProcessor.h  ClassfileProcessor.cpp
src/domain/jar/: BUILD.bazel  JarEntry.h  JarEntryInfo.h  Processor.cpp  Processor.h
src/domain/stats/: BUILD.bazel  DigestReport.cpp  DigestReport.h  ProfileData.cpp  ProfileData.h  Report.cpp  Report.h  Results.cpp  Results.h  ScopedTimer.cpp  ScopedTimer.h
src/domain/utils/: DigestUtils.h
src/includes/: AttributeTags.h  CLI11.hpp  classfile_constants.h
src/includes/visit_struct/: visit_struct_intrusive.hpp
src/infrastructure/: BUILD.bazel
src/infrastructure/app/: BUILD.bazel  CliApp.cpp  CliApp.h  Command.h
src/infrastructure/db/: BUILD.bazel  Database.cpp  Database.h  DbConsts.h  StringPool.cpp  StringPool.h
src/infrastructure/filesystem/: BUILD.bazel  FilesystemUtils.cpp  FilesystemUtils.h  Utils.cpp  Utils.h
src/infrastructure/log/: BUILD.bazel  Log.cpp  Log.h
src/infrastructure/profiling/: BUILD.bazel  ScopedTimer.cpp  ScopedTimer.h
src/infrastructure/string/: BUILD.bazel  StringUtils.h
src/interfaces/: BUILD.bazel
src/interfaces/cfdiff/: BUILD.bazel  CfDiff.h  ClassfileDiffApp.cpp  Main.cpp
src/interfaces/tarracsh/: App.cpp  App.h  (+4 more)
src/jars/: JarAnalyzerTask.cpp  JarAnalyzerTask.h  JarDigestTask.cpp  JarDigestTask.h  JarEntry.h  JarGraphTask.cpp  JarGraphTask.h  JarParserTask.cpp  JarParserTask.h  JarProcessor.cpp  JarProcessor.h  JarTask.h
src/nav/: HtmlGen.cpp  HtmlGen.h  IndexHtmlGen.cpp  IndexHtmlGen.h
src/resources/: BUILD.bazel  HTMLPage.htm
src/server/: PublicDigestServiceImpl.cpp  PublicDigestServiceImpl.h  RequestConfig.h
src/tables/: CallGraphDb.cpp  CallGraphDb.h  ClassfilesTable.cpp  ClassfilesTable.h  Database.cpp  Database.h  DigestDb.cpp  DigestDb.h  FilesTable.cpp  FilesTable.h  Query.h  StringPool.h  Table.h
src/test/: test.cpp
src/utils/: DigestUtils.h  FilesystemUtils.cpp  FilesystemUtils.h  StringPool.h  StringUtils.h
(+348 files in other folders)
