package(default_visibility = ["//visibility:public"])

cc_library(
    name = "app_context_lib",
    hdrs = ["Context.h"],
    copts = ["-std=c++20"],
    includes = [".."],
    deps = [
        "//src/domain:options_lib",
        "//src/domain/stats:stats_lib",
        "//src/infrastructure:infrastructure_lib",
    ],
)

cc_library(
    name = "app_lib",
    srcs = glob(
        [
            "**/*.cpp",
            "**/*.cc",
        ],
        exclude = [
            "Main.cpp",
            "classfile/**",
            "commands/**",
            "server/**",
        ],
        allow_empty = True,
    ),
    hdrs = glob(
        ["**/*.h"],
        exclude = [
            "classfile/**",
            "commands/**",
            "server/**",
        ],
        allow_empty = True,
    ),
    copts = ["-std=c++20"],
    defines = ["FMT_HEADER_ONLY=1"],
    includes = [".."],
    deps = [
        ":app_context_lib",
        "//:vcpkg_headers",
        "//src/app/classfile:app_classfile_lib",
        "//src/domain:domain_lib",
        "//src/infrastructure:infrastructure_lib",
    ],
)
