package(default_visibility = ["//visibility:public"])

cc_library(
    name = "utils_lib",
    hdrs = ["Utils.h"],
    copts = ["-std=c++20"],
    includes = [".."],
    deps = [
        "//src/infrastructure/db:db_lib",
        "//src/infrastructure/string:string_lib",
    ],
)

cc_library(
    name = "domain_lib",
    srcs = glob(
        [
            "**/*.cpp",
            "**/*.cc",
        ],
        exclude = [
            "db/**",
        ],
        allow_empty = True,
    ),
    hdrs = glob(
        ["**/*.h"],
        exclude = [
            "db/**",
        ],
        allow_empty = True,
    ),
    copts = ["-std=c++20"],
    defines = ["FMT_HEADER_ONLY=1"],
    includes = [".."],
    deps = [
        "//:vcpkg_headers",
        "//src/infrastructure:infrastructure_lib",
        "//src/domain:utils_lib",
        "//src/domain/db:db_lib",
    ],
)
