package(default_visibility = ["//visibility:public"])

cc_library(
    name = "infrastructure_lib",
    srcs = glob(
        [
            "**/*.cpp",
            "**/*.cc",
        ],
        exclude = [
            "db/**",
            "app/**",
            "filesystem/**",
            "log/**",
            "profiling/**",
            "string/**",
        ],
        allow_empty = True,
    ),
    hdrs = glob(
        ["**/*.h"],
        exclude = [
            "db/**",
            "app/**",
            "filesystem/**",
            "log/**",
            "profiling/**",
            "string/**",
        ],
        allow_empty = True,
    ),
    copts = ["-std=c++20"],
    defines = ["FMT_HEADER_ONLY=1"],
    includes = [".."],
    deps = [
        "//:vcpkg_headers",
        "//src/infrastructure/db:db_lib",
        "//src/infrastructure/app:cli_lib",
        "//src/infrastructure/filesystem:filesystem_lib",
        "//src/infrastructure/log:log_lib",
        "//src/infrastructure/profiling:profiling_lib",
        "//src/infrastructure/string:string_lib",
    ],
)
