package(default_visibility = ["//visibility:public"])

cc_library(
    name = "app_classfile_lib",
    srcs = ["ParserPrinter.cpp"],
    hdrs = ["ParserPrinter.h"],
    copts = ["-std=c++20"],
    defines = ["FMT_HEADER_ONLY=1"],
    includes = ["../.."],
    deps = [
        "//:vcpkg_headers",
        "//src/app/classfile/constantpool:constantpool_lib",
        "//src/domain:domain_lib",
        "//src/infrastructure:infrastructure_lib",
    ],
)
