package(default_visibility = ["//visibility:public"])

cc_library(
    name = "app_server_lib_core",
    srcs = ["RequestContext.cpp"],
    hdrs = ["RequestContext.h"],
    copts = ["-std=c++20"],
    defines = ["FMT_HEADER_ONLY=1"],
    includes = ["../.."],
    deps = [
        "//:vcpkg_headers",
        "//src/app:app_lib",
        "//src/app/server/digest/proto:proto_lib",
        "//src/domain:domain_lib",
        "//src/infrastructure:infrastructure_lib",
    ],
)

cc_library(
    name = "app_server_lib",
    deps = [
        ":app_server_lib_core",
        "//src/app/server/digest:digest_lib",
    ],
)
