package(default_visibility = ["//visibility:public"])

cc_library(
    name = "graph_lib",
    srcs = [
        "ClassfileProcessor.cpp",
    ],
    hdrs = [
        "ClassFileProcessor.h",
    ],
    copts = ["-std=c++20"],
    defines = ["FMT_HEADER_ONLY=1"],
    includes = ["../.."],
    deps = [
        "//:vcpkg_headers",
        "//src/domain:utils_lib",
        "//src/domain/classfile:classfile_lib",
        "//src/domain/db:db_lib",
        "//src/domain/db:callgraph_lib",
    ],
)
