package(default_visibility = ["//visibility:public"])

cc_library(
    name = "cli_lib",
    srcs = ["CliApp.cpp"],
    hdrs = [
        "CliApp.h",
        "Command.h",
    ],
    copts = ["-std=c++20"],
    includes = ["../.."],
    deps = [
        "//:vcpkg_headers",
        "//src/infrastructure/log:log_lib",
    ],
)
