package(default_visibility = ["//visibility:public"])

cc_library(
    name = "db_lib",
    srcs = glob(
        [
            "**/*.cpp",
            "**/*.cc",
        ],
        allow_empty = True,
    ),
    hdrs = glob(["**/*.h"], allow_empty = True),
    copts = ["-std=c++20"],
    defines = ["FMT_HEADER_ONLY=1"],
    includes = ["../.."],
    deps = [
        "//:vcpkg_headers",
        "//src/infrastructure/log:log_lib",
        "//src/infrastructure/profiling:profiling_lib",
        "//src/infrastructure/string:string_lib",
    ],
)
