package(default_visibility = ["//visibility:public"])

cc_library(
    name = "tarracsh_cli_lib",
    srcs = ["TarracshCli.cpp"],
    hdrs = ["TarracshCli.h"],
    copts = ["-std=c++20"],
    includes = ["../../"],
    deps = [
        "//src/app:app_lib",
        "//src/app/commands:app_commands_lib",
        "//src/app/server:app_server_lib",
    ],
)

cc_binary(
    name = "tarracsh",
    srcs = ["Main.cpp"],
    copts = ["-std=c++20"],
    includes = ["../../"],
    linkopts = [
        "-static-libstdc++",
        "-static-libgcc",
    ],
    deps = [
        ":tarracsh_cli_lib",
        "//:vcpkg_runtime_libs",
    ],
)
