package(default_visibility = ["//visibility:public"])

cc_test(
    name = "app_tests",
    srcs = glob(["**/*.cpp"]) + ["commands/callgraph/CallGraphAnalyzerTestBase.h"],
    includes = ["commands/callgraph"],
    copts = [
        "-std=c++20",
        "-DPROJECT_SOURCE_DIR=\\\"__main__\\\"",
    ],
    linkstatic = True,
    deps = [
        "//src/app:app_lib",
        "//src/app/server:app_server_lib_core",
        "//src/app/server/digest:digest_lib",
        "//:vcpkg_runtime_libs",
        "//:vcpkg_gtest_main",
    ],
    data = ["//test-subjects:all"],
)
