package(default_visibility = ["//visibility:public"])

cc_test(
    name = "core_tests",
    srcs = glob(
        ["**/*.cpp"],
        exclude = [
            "db/**",
        ],
    ),
    copts = [
        "-std=c++20",
        "-DPROJECT_SOURCE_DIR=\\\"__main__\\\"",
    ],
    linkstatic = True,
    deps = [
        "//src/domain:domain_lib",
        "//:vcpkg_runtime_libs",
        "//:vcpkg_gtest_main",
    ],
    data = ["//test-subjects:all"],
)

test_suite(
    name = "domain_tests",
    tests = [
        ":core_tests",
        "//test/src/domain/db:db_tests",
    ],
)
