package(default_visibility = ["//visibility:public"])

cc_library(
    name = "digest_lib",
    srcs = [
        "ServerCommand.cpp",
        "ServiceImpl.cpp",
    ],
    hdrs = [
        "ServerCommand.h",
        "ServiceImpl.h",
    ],
    copts = ["-std=c++20"],
    defines = ["FMT_HEADER_ONLY=1"],
    includes = ["../../.."],
    deps = [
        "//:vcpkg_headers",
        "//src/app:app_lib",
        "//src/app/server:app_server_lib_core",
        "//src/app/server/digest/proto:proto_lib",
        "//src/domain:domain_lib",
        "//src/infrastructure:infrastructure_lib",
    ],
)
