package(default_visibility = ["//visibility:public"])

cc_library(
    name = "reader_lib",
    srcs = [
        "ClassFileReader.cpp",
        "FileReader.cpp",
        "MemoryReader.cpp",
    ],
    hdrs = [
        "ClassFileReader.h",
        "FileReader.h",
        "MemoryReader.h",
        "VectorReader.h",
    ],
    copts = ["-std=c++20"],
    includes = ["../../.."],
    deps = [
        "//src/domain/classfile/types:types_lib",
    ],
)
