package(default_visibility = ["//visibility:public"])

cc_library(
    name = "signature_scanner",
    hdrs = ["SignatureScanner.h"],
    copts = ["-std=c++20"],
    includes = ["../../.."],
)

cc_library(
    name = "signature_lib",
    srcs = [
        "SignatureParser.cpp",
    ],
    hdrs = [
        "SignatureParser.h",
    ],
    copts = ["-std=c++20"],
    defines = ["FMT_HEADER_ONLY=1"],
    includes = ["../../.."],
    deps = [
        ":signature_scanner",
        "//:vcpkg_headers",
        "//src/domain/classfile/constantpool:constantpool_lib",
        "//src/domain/classfile/reader:reader_lib",
        "//src/domain/classfile/signature/parser:signature_parser_core",
        "//src/domain/classfile/types:types_lib",
    ],
)
