package(default_visibility = ["//visibility:public"])

cc_library(
    name = "table_lib",
    srcs = glob(["**/*.cpp"], allow_empty = True),
    hdrs = glob(["**/*.h"], allow_empty = True) + ["//src/domain/db/columns:columns_hdrs"],
    copts = ["-std=c++20"],
    defines = ["FMT_HEADER_ONLY=1"],
    includes = ["../../.."],
    deps = [
        "//:vcpkg_headers",
        "//src/domain:utils_lib",
        "//src/infrastructure/db:db_lib",
        "//src/infrastructure/string:string_lib",
    ],
)
